# mteam-dashboard-backend

./: .gitignore  Cargo.toml  INSTALL.md  README.md  config.json
action-processor/: Cargo.toml  README.md  coverage.sh  timeline-multiplayer-09182024.csv
action-processor/src/: action_csv_row.rs  csv_processor.rs  csv_reader.rs  csv_row_processor.rs  debug_message.rs  lib.rs  main.rs  plot_processors.rs  plot_structures.rs  processing_state.rs  utils.rs
action-processor/src/detection/: mod.rs
action-processor/src/input_sources/: file_reader.rs  http_reader.rs  mod.rs
action-processor/src/parsing/: mod.rs
action-processor/tests/: integration_test.rs
action-processor/tests/data/: invalid_header.csv
plotly-processor/: Cargo.toml
plotly-processor/src/: actions_plot_builders.rs  actions_plot_data.rs  actions_plot_data_transformers.rs  annotation.rs  compression_line.rs  congnitive_load_plot_data.rs  font.rs  image.rs  layout.rs  lib.rs  line.rs  plotly_builders.rs  plotly_data_transformers.rs  scatter_plot_data.rs  shape.rs
plotly-processor/src/actions/: actions_plot_builders.rs  actions_plot_compression_line.rs  actions_plot_data.rs  actions_plot_data_transformers.rs  builders.rs  missed_action_coordinates_calculator.rs  mod.rs  plot_data.rs  transformers.rs
plotly-processor/src/config/: init.rs  mod.rs  plotly_mappings.rs
plotly-processor/src/visual-attention/: mod.rs  plot_data.rs  transformers.rs
web/: Cargo.toml  Dockerfile  README.md
web/src/: app_context.rs  data_source.rs  main.rs
web/src/config/: config.rs  mod.rs  resolve_file_path.rs
web/src/utils/: date.rs  (+1 more)
(+42 files in other folders)
