[package]
name = "mteam-dashboard-action-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
csv = "1.3.1"
serde = { version = "1.0.27", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["stream", "blocking"] }
url = "2.5.4"

[dev-dependencies]
mockito = "1.6.1"
