[package]
name = "mteam-dashboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
mteam-dashboard-action-processor = { path = "../action-processor" }
mteam-dashboard-cognitive-load-processor = { path = "../cognitive-load-processor" }
mteam-dashboard-plotly-processor = { path = "../plotly-processor" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
google-drive3 = "6.0.0"
hyper = { version = "1.5.2"}
hyper-rustls = "0.27.5"
rustls = "0.23.21"
chrono = "0.4.39"
hyper-util = "0.1.10"
reqwest = "0.12.12"
futures = "0.3.31"
env_logger = "0.11.6"
bytes = "1.9.0"
log = "0.4.22"
async-stream = "0.3.6"

[dev-dependencies]
tempfile = "3.15.0"
